RESOLVED FIXED201812
REGRESSION (r243113): Leak of multiple instance variable blocks when deallocating _WKAttributedStringNavigationDelegate
https://bugs.webkit.org/show_bug.cgi?id=201812
Summary REGRESSION (r243113): Leak of multiple instance variable blocks when dealloca...
David Kilzer (:ddkilzer)
Reported 2019-09-15 21:58:22 PDT
Leak of multiple instance variable blocks when deallocating _WKAttributedStringNavigationDelegate. The _WKAttributedStringNavigationDelegate class is missing a -dealloc method under MRR. Regressed with: Bug 195636: Add new NSAttributedString API for converting HTML. <https://bugs.webkit.org/show_bug.cgi?id=195636> <https://trac.webkit.org/changeset/243113/webkit>
Attachments
Patch v1 (1.83 KB, patch)
2019-09-15 22:02 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2019-09-15 21:58:39 PDT
David Kilzer (:ddkilzer)
Comment 2 2019-09-15 22:02:06 PDT
Created attachment 378838 [details] Patch v1
Timothy Hatcher
Comment 3 2019-09-16 09:04:30 PDT
Comment on attachment 378838 [details] Patch v1 Thanks!
WebKit Commit Bot
Comment 4 2019-09-16 09:41:53 PDT
Comment on attachment 378838 [details] Patch v1 Clearing flags on attachment: 378838 Committed r249902: <https://trac.webkit.org/changeset/249902>
WebKit Commit Bot
Comment 5 2019-09-16 09:41:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.