REGRESSION (r243113): Leak of multiple instance variable blocks when deallocating _WKAttributedStringNavigationDelegate <https://webkit.org/b/201812>

Reviewed by Timothy Hatcher.

* UIProcess/API/Cocoa/NSAttributedString.mm:
(-[_WKAttributedStringNavigationDelegate dealloc]): Add method
to release instance variable blocks to fix potential leaks.


Canonical link: https://commits.webkit.org/215456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249902 268f45cc-cd09-0410-ab3c-d52691b4dbfc